--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<!--/.footer-->
 
 
-		<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing,key=AIzaSyCjo4bDlh2pdMwbz3rCXmgdwooAyyiHawc&v=3&callback=initMap">
+		<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=key=AIzaSyCjo4bDlh2pdMwbz3rCXmgdwooAyyiHawc&v=3&callback=initMap">
    		</script>
 		<script src="js/main.js" async defer></script>
 
