--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 		<!--/.footer-->
 
 
-		<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=key=AIzaSyCjo4bDlh2pdMwbz3rCXmgdwooAyyiHawc&v=3&callback=initMap">
-   		</script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjo4bDlh2pdMwbz3rCXmgdwooAyyiHawc&libraries=drawing&callback=initMap"
+         async defer></script>
+
 		<script src="js/main.js" async defer></script>
 
 		<script src="js/Library/knockout-3.2.0.js" async defer></script>
